fix(contact) Display contact cols on top of each other on small screens

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -441,7 +441,7 @@ h2:after {
   background: rgba(0,0,0,.03);
   color: #333;
 }
- 
+
 #guide-content #accordion .card-header {
   background: none;
   border-bottom: none;
@@ -610,6 +610,10 @@ h2:after {
 #contact-section .contact-info {
   margin-top: 100px;
   margin-bottom: 150px;
+}
+
+#contact-section .contact-info-text {
+  margin-bottom: 50px;
 }
 
 #contact-section .contact-info-text a {
